# Forge

./: .gitignore  ADDING_TOOLS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  bootstrap.ps1  bootstrap.sh  forge  install.ps1  install.sh  update.ps1  update.sh
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
src/: auth.rs  config.rs  headless.rs  main.rs
src/agent/: agent_def.rs  compaction.rs  conversation_log.rs  core.rs  log_types.rs  mod.rs  rewind.rs  subagent.rs
src/api/: client.rs  mod.rs  types.rs
src/tools/: custom.rs  definitions.rs  executor.rs  mod.rs  patch.rs  web.rs
ui/: package.json  tsconfig.json
ui/src/: agent-bridge.ts  index.tsx  model-display.ts  protocol.ts  startup-tips.ts
ui/src/components/: App.tsx  ApprovalDialog.tsx  BgPromptDialog.tsx  ContextBar.tsx  MarkdownRenderer.tsx  Menu.tsx  Message.tsx  PlanApproval.tsx  PromptInput.tsx  QuestionDialog.tsx  Spinner.tsx  SubagentStatus.tsx
ui/src/hooks/: useAgent.ts
ui/src/utils/: markdown.ts
